* update: `Arguments` `options` now also support stacking.
* update: type setting more methods.
* update: update `CliScript` header.
* new: `ConsoleScriptManager` got two events you can add a callable to:
  - if no scripts triggered a custom method can be triggered
  - after every thing is done on exit another trigger

:leveloffset!:

:leveloffset: +2

= 0.12.1 (2022 Aug 11)
:author: Philip Michael Raab
:email: <philip@cathedral.co.za>
:description: Utilities to simplify working with the console.
:keywords: inanepain, library, console, cli, utility, text-table, prompt
:revnumber: 0.12.1
:revdate: 2022-08-11
:copyright: Unlicense
:experimental:
:hide-uri-scheme:
:icons: font
:source-highlighter: highlight.js
:sectnums!:
:toc: left
:sectanchors:

* fix: `TextTable` `divider` => uses full column width
* fix: `TextTable` coloured string cell width
* fix: `Colors::length` error

:leveloffset!:
:leveloffset: +2

= 0.13.0 (2022 Oct 10)
:author: Philip Michael Raab
:email: <philip@cathedral.co.za>
:description: Utilities to simplify working with the console.
:keywords: inanepain, library, console, cli, utility, text-table, prompt
:revnumber: 0.13.0
:revdate: 2022-10-10
:copyright: Unlicense
:experimental:
:hide-uri-scheme:
:icons: font
:source-highlighter: highlight.js
:sectnums!:
:toc: left
:sectanchors:

* fix: STD(OUT/IN/ERR) undefined
* new: `Cli::isCliServer` Is PHP built-in server
* new: `Pencil` stationary tools
* upd: `Cli::input` new optional arg `$default` returned if non-interactive shell
* many minor tweaks, updates and fixes

:leveloffset!:
:leveloffset: +2

= 0.14.0 (2022 Dec 21)
:author: Philip Michael Raab
:email: <philip@cathedral.co.za>
:description: Utilities to simplify working with the console.
:keywords: inanepain, library, console, cli, utility, text-table, prompt
:revnumber: 0.14.0
:revdate: 2022-12-21
:copyright: Unlicense
:experimental:
:hide-uri-scheme:
:icons: font
:source-highlighter: highlight.js
:sectnums!:
:toc: left
:sectanchors:
