@@ -1,0 +1,30 @@
+= Changelog: inanepain/cli
+:author: Philip Michael Raab
+:email: <philip@cathedral.co.za>
+:description: Utilities to simplify working with the console.
+:keywords: inanepain, library, console, cli, utility, text-table, prompt
+:revnumber: 0.18.0
+:revdate: 2025-xx-xx
+:revremark: -dev
+:version-label: Unconfirmed
+:copyright: Unlicense
+:experimental:
+:hide-uri-scheme:
+:icons: font
+:source-highlighter: highlight.js
+:sectnums!:
+:toc: left
+:sectanchors:
+
+== History
+
+Version: $Id$ ($Date$)
+
+include::./release/0.0.0.adoc[leveloffset=+2]
+
+include::./release/0.12.1.adoc[leveloffset=+2]
+include::./release/0.13.0.adoc[leveloffset=+2]
+include::./release/0.14.0.adoc[leveloffset=+2]
+include::./release/0.14.1.adoc[leveloffset=+2]
+include::./release/0.15.0.adoc[leveloffset=+2]
+include::./release/0.16.0.adoc[leveloffset=+2]
