@@ -1,0 +1,27 @@
+= 0.14.0 (2022 Dec 21)
+:author: Philip Michael Raab
+:email: <philip@cathedral.co.za>
+:description: Utilities to simplify working with the console.
+:keywords: inanepain, library, console, cli, utility, text-table, prompt
+:revnumber: 0.14.0
+:revdate: 2022-12-21
+:copyright: Unlicense
+:experimental:
+:hide-uri-scheme:
+:icons: font
+:source-highlighter: highlight.js
+:sectnums!:
+:toc: left
+:sectanchors:
+
+* new: `Pencil::format` returns colour string without outputting it
+* new: `Pencil::input` reads terminal input
+* new: `Pencil` cache original text for reversing it in certain situations
+* new: `Colour::Default` system colour
+* fix: `Arguments::getOption` return type
+* fix: various little updates and fixes
+* update: `Arguments` implements `\Inane\Stdlib\Converters\JSONable`
+* update: `Arguments::toJSON` added $pretty option to format json
+* update: `HelpScreen` fixes for *php 8.1*
+* update: `\Inane\Stdlib\Json` start to replace `json_*`
+* update: **inanepain/stdlib** requirement bumped to **0.4.0**
