@@ -1,0 +1,17 @@
+= 0.17.0 (2025 Sep 14)
+:author: Philip Michael Raab
+:email: <philip@cathedral.co.za>
+:description: Utilities to simplify working with the console.
+:keywords: inanepain, library, console, cli, utility, text-table, prompt
+:revnumber: 0.17.0
+:revdate: 2025-09-14
+:copyright: Unlicense
+:experimental:
+:hide-uri-scheme:
+:icons: font
+:source-highlighter: highlight.js
+:sectnums!:
+:toc: left
+:sectanchors:
+
+* new: `Console` Three classes that handle a directory of cli script files. Running them as templates an making range of methods available to them.
