@@ -1,0 +1,7 @@
+= Install
+
+.composer
+[source,shell]
+====
+composer require {pkg-id}
+====
