@@ -47,6 +47,7 @@ Version: $Id$ ($Date$)
 * new: `ConsoleScriptManager` got two events you can add a callable to:
   - if no scripts triggered a custom method can be triggered
   - after every thing is done on exit another trigger
+* new: `CliScript` can have their own custom config.
 
 :leveloffset!:
 
